--- a/Admin Page Website/dashboard-page.html
+++ b/Admin Page Website/dashboard-page.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-	<title>Admin Page</title>
+	<title>Dashboard Page</title>
 	<style type="text/css">
 		.nav-link:hover {
 			background-color: grey;
@@ -46,22 +46,22 @@
 		<div class="col-md-2 bg-dark p-3">
 			<ul class="nav flex-column m-3">
 			  <li class="nav-item">
-			    <a class="nav-link text-white" aria-current="page" href="#"><i class="fas fa-tachometer-alt me-2"></i>Dashboard</a><hr class="bg-secondary">
+			    <a class="nav-link text-white" aria-current="page" href="dashboard-page.html"><i class="fas fa-tachometer-alt me-2"></i>Dashboard</a><hr class="bg-secondary">
 			  </li>
 			  <li class="nav-item">
-			    <a class="nav-link text-white" href="#"><i class="fas fa-user-graduate me-2"></i>Student List</a><hr class="bg-secondary">
+			    <a class="nav-link text-white" href="student-page.html"><i class="fas fa-user-graduate me-2"></i>Student List</a><hr class="bg-secondary">
 			  </li>
 			  <li class="nav-item">
-			    <a class="nav-link text-white" href="#"><i class="fas fa-chalkboard-teacher me-2"></i>Lecturer List</a><hr class="bg-secondary">
+			    <a class="nav-link text-white" href="lecturer-page.html"><i class="fas fa-chalkboard-teacher me-2"></i>Lecturer List</a><hr class="bg-secondary">
 			  </li>
 			  <li class="nav-item">
-			    <a class="nav-link text-white" href="#"><i class="fas fa-user-edit me-2"></i>Employee List</a><hr class="bg-secondary">
+			    <a class="nav-link text-white" href="employee-page.html"><i class="fas fa-user-edit me-2"></i>Employee List</a><hr class="bg-secondary">
 			  </li>
 			  <li class="nav-item">
-			    <a class="nav-link text-white" href="#"><i class="fas fa-calendar-alt me-2"></i>Class Schedule</a><hr class="bg-secondary">
+			    <a class="nav-link text-white" href="schedule-page.html"><i class="fas fa-calendar-alt me-2"></i>Class Schedule</a><hr class="bg-secondary">
 			  </li>
 			  <li class="nav-item">
-			    <a class="nav-link text-white" href="#"><i class="fas fa-marker me-2"></i>Student Value</a><hr class="bg-secondary">
+			    <a class="nav-link text-white" href="value-page.html"><i class="fas fa-marker me-2"></i>Student Value</a><hr class="bg-secondary">
 			  </li>
 			</ul>
 		</div>
